# ampersend-sdk

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: python-ci.yml
python/ampersend-sdk/: pyproject.toml
python/ampersend-sdk/src/ampersend_sdk/a2a/client/: __init__.py  a2a_client_extensions_interceptor.py  x402_client.py  x402_client_composed.py  x402_client_factory.py  x402_middleware.py  x402_remote_a2a_agent.py
python/ampersend-sdk/src/ampersend_sdk/a2a/server/: __init__.py  a2a_executor.py  a2a_monkey.py  before_agent_callback.py  facilitator_x402_server_executor.py  to_a2a.py  x402_server_executor.py
python/ampersend-sdk/src/ampersend_sdk/ampersend/: __init__.py  client.py  treasurer.py
python/ampersend-sdk/src/ampersend_sdk/ampersend_api/: types.py
python/ampersend-sdk/src/ampersend_sdk/smart_account/: __init__.py  sign.py
python/ampersend-sdk/src/ampersend_sdk/x402/: __init__.py  treasurer.py  wallet.py
python/ampersend-sdk/src/ampersend_sdk/x402/treasurers/: __init__.py  naive.py
python/ampersend-sdk/src/ampersend_sdk/x402/wallets/account/: __init__.py  wallet.py
python/ampersend-sdk/src/ampersend_sdk/x402/wallets/smart_account/: __init__.py  exact.py  wallet.py
python/ampersend-sdk/tests/unit/ampersend/: test_authorizer.py  test_response_models.py
python/ampersend-sdk/tests/unit/ampersend_api/: test_authorizer.py  test_response_models.py
python/ampersend-sdk/tests/unit/smart_account/: test_encode_1271_signature.py
python/ampersend-sdk/tests/unit/x402/treasurers/: test_naive.py
python/ampersend-sdk/tests/unit/x402/wallets/smart_account/: test_sign_erc3009.py  test_wallet.py
python/examples/src/examples/a2a/buyer/adk/: agent.py
typescript/: pnpm-lock.yaml
typescript/examples/langchain-mcp-web/: OFFICIAL_UI_SETUP.md  USE_OFFICIAL_UI.sh
typescript/examples/langchain-mcp-web/src/: server.ts
typescript/examples/langchain-official-ui/: .gitignore  README.md  package.json  tsconfig.json
typescript/examples/langchain-official-ui/src/: server.ts
