[project]
name = "ampersend-sdk-python"
version = "0.0.1"
requires-python = ">=3.13"
dependencies = [
    "ampersend-sdk",
]

[tool.uv.sources]
ampersend-sdk = { workspace = true }
x402-a2a = { git = "https://github.com/google-agentic-commerce/a2a-x402", subdirectory = "python/x402_a2a", rev = "a50b512a61880c180bc82c1332aee271f46942b6" }

[tool.uv.workspace]
members = ["python/*"]

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = ["I", "F401"]

[tool.mypy]
python_version = "3.13"
strict = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = ["x402_a2a.*"]
follow_untyped_imports = true

[tool.pytest.ini_options]
testpaths = [
    "python/ampersend-sdk/tests",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow running",
    "integration: marks tests as integration tests (deselect with \"-m 'not integration'\")",
]

[dependency-groups]
dev = [
    "ruff>=0.13.2",
    "mypy>=1.8.0",
]
